[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proj_on_uav"
version = "0.2.9"
description = "Multi-angular UAV reflectance extraction, filtering, and RPV modeling"
requires-python = ">=3.10"
dependencies = []

[project.entry-points.console_scripts]
uav-extract = "main_extract:main"
uav-filter = "filtering:main"
uav-rpv = "rpv_modelling:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

